force-app/main/default/objects/Source_of_wealth_other__c/Source_of_wealth_other__c.object-meta.xml
<CustomObject>
    <label>Source of Wealth Other</label>
    <nameField>
        <displayFormat>SOWOT - {0000000}</displayFormat>
        <label>Source of Wealth Other</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source of Wealth Others</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>