force-app/main/default/objects/Source_of_wealth_other__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>