force-app/main/default/objects/Source_of_wealth_other__c/fields/Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source of Wealth</label>
    <referenceTo>Source_of_Wealth__c</referenceTo>
    <relationshipLabel>Source of Wealth Others</relationshipLabel>
    <relationshipName>Source_of_Wealth_Others</relationshipName>
    <type>Lookup</type>
</CustomField>