force-app/main/default/objects/Source_of_wealth_other__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_of_Wealth_Other</valueSetName>
    </valueSet>
</CustomField>