force-app/main/default/objects/Source_of_wealth_other__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Detail__c</columns>
    <columns>Value__c</columns>
    <columns>Income__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>